# expand

./: Makefile.am  Makefile.mingw  README.md  configure.ac  expand.c  expand.h  expand.nsi  local_util.c  local_util.h
po/: Makefile.mingw  POTFILES.in  es.po
